--- a/templates/index.html
+++ b/templates/index.html
@@ -233,6 +233,8 @@
                 <div id="tag-tooltip" class="tooltip"></div>
 
                 <div id="toolbox">
+                    <button id="matrix" class="icon-button"><i class="fa-solid fa-bars icon"></i></button>
+                    <!-- <button id="sub-matrix" class="icon-button"><i class="fa-solid fa-play icon"></i></button> -->
                     <button id="restore" class="icon-button"><i class="fa-solid fa-rotate-right icon"></i></button>
                     <button id="zoom-in" class="icon-button"><i class="fa-solid fa-plus icon"></i></button>
                     <button id="zoom-out" class="icon-button"><i class="fa-solid fa-minus icon"></i></button>
@@ -403,6 +405,8 @@
     // text1 paperLabel; text2 paperCount; text3 year; text4 field
 
 $(function () {
+    /* topic子邻接矩阵索引 */
+    topicIndex = 0;
     full_screen = 0;
     /* 系统说明图片状态：0为前端没有图片，1为前端有且正在展示图片，2为前端有但没有展示图片 */
     image_status = 0;
