--- a/static/css/style.css
+++ b/static/css/style.css
@@ -603,3 +603,49 @@ input:checked + .slider:before {
 	src: url(https://fonts.gstatic.com/s/lato/v24/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
   }
 
+
+  #prism-container {
+	position: relative;
+	width: 1300px;
+	height: 800px;
+	perspective: 2000px;
+	overflow: hidden;
+	border: 1px solid #000;
+  }
+  #prism {
+	position: absolute;
+	width: 100%;
+	height: 60%;
+	margin-top: 20%;
+	transform-style: preserve-3d;
+	transform-origin: center center;
+  }
+  .svg-wrapper {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	transform-origin: center;
+  }
+  @keyframes rotate {
+	from { transform: rotateY(0deg); }
+	to { transform: rotateY(360deg); }
+  }
+  .center-marker {
+	position: absolute;
+	width: 2px;
+	height: 600px;
+	background-color: red;
+	left: 50%;
+	transform: translateX(-50%);
+  }
+  .prism-slider-container {
+	position: absolute;
+	top: 50%;
+	right: 0px;
+	transform: translateY(-50%);
+	width: 200px !important;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+  }
