--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
 
     <script src="/src/js/index.js"></script>
     <script src="/src/js/download-svg.js"></script>
+    <script src="/src/js/matrix.js"></script>
 
 </head>
 
@@ -233,8 +234,7 @@
                 <div id="tag-tooltip" class="tooltip"></div>
 
                 <div id="toolbox">
-                    <button id="matrix" class="icon-button"><i class="fa-solid fa-bars icon"></i></button>
-                    <!-- <button id="sub-matrix" class="icon-button"><i class="fa-solid fa-play icon"></i></button> -->
+                    <!-- <button id="matrix" class="icon-button"><i class="fa-solid fa-bars icon"></i></button> -->
                     <button id="restore" class="icon-button"><i class="fa-solid fa-rotate-right icon"></i></button>
                     <button id="zoom-in" class="icon-button"><i class="fa-solid fa-plus icon"></i></button>
                     <button id="zoom-out" class="icon-button"><i class="fa-solid fa-minus icon"></i></button>
@@ -407,10 +407,10 @@
 $(function () {
     /* topic子邻接矩阵索引 */
     topicIndex = 0;
-    full_screen = 0;
+    isFullScreen = 0;
     /* 系统说明图片状态：0为前端没有图片，1为前端有且正在展示图片，2为前端有但没有展示图片 */
-    image_status = 0;
-    image_data = "";
+    imageStatus = 0;
+    imageData = "";
     $("#selector, #node-info, #node-info-blank, #up-line, #down-line, #edge-info").hide();
     authorID = "{{ authorID }}";
     name = "{{ name }}";
@@ -444,7 +444,6 @@ $(function () {
         $("#field h1").append(`<span>- ${fieldlabel}</span>`);
 
         d3.json(filename).then( data => {
-            console.log('data', data);
             years = data[1];            //年份节点
             nodes = data[2];            //论文节点
             edges = data[3];            //path
@@ -560,7 +559,7 @@ $(function () {
                     console.log("Response:", jqXHR.responseText);
                 }
             });
-            full_screen = 0;
+            isFullScreen = 0;
         }
         $("#mode, #node-width, #remove-survey").on('change', ajaxRequest);
     </script>
@@ -575,25 +574,25 @@ $(function () {
         $("#description").append(preloadedImage); // Assuming there's a div with id 'imageContainer' to hold the image
 
         $("#info").click(function() {
-            if (image_status == 0) {
+            if (imageStatus == 0) {
                 // Display the preloaded image
                 $(preloadedImage).show();
                 $("#mainsvg").hide();
                 $("#tagcloud").hide();
                 $("#description").show();
-                image_status = 1;
+                imageStatus = 1;
             }
-            else if (image_status == 1) {
+            else if (imageStatus == 1) {
                 reset_graph();
                 $(preloadedImage).hide(); // Hide the image
-                image_status = 2;
+                imageStatus = 2;
             }
-            else if (image_status == 2) {
+            else if (imageStatus == 2) {
                 $(preloadedImage).show(); // Show the image again
                 $("#mainsvg").hide();
                 $("#tagcloud").hide();
                 $("#description").show();
-                image_status = 1;
+                imageStatus = 1;
             }
         });
     </script>
