<fix>: 删除正式环境的测试领域

--- a/templates/front.html
+++ b/templates/front.html
@@ -63,6 +63,9 @@ and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details
 					if(!isTest) {
 						delete data['fellow'];
 						delete data['ACMfellowTuring'];
+						delete data['fellowV1'];
+						delete data['fellowV2'];
+						delete data['fellowV3'];
 					}
 					// console.log(data);
 					createList(data);
