--- a/static/css/style.css
+++ b/static/css/style.css
@@ -603,20 +603,28 @@ input:checked + .slider:before {
 	src: url(https://fonts.gstatic.com/s/lato/v24/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
   }
 
+  #TopicPrism {
+	height: 100%;
+      margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
 
   #prism-container {
 	position: relative;
-	width: 1300px;
-	height: 800px;
-	perspective: 2000px;
-	overflow: hidden;
-	border: 1px solid #000;
+	width: 100px;
+	height: 1200px;
+	perspective: 2500px;
+	overflow: visible;
+	/* overflow: hidden; */
+	/* border: 1px solid #000; */
   }
   #prism {
 	position: absolute;
 	width: 100%;
-	height: 60%;
-	margin-top: 20%;
+	height: 100%;
+	margin-top: 0%;
 	transform-style: preserve-3d;
 	transform-origin: center center;
   }
@@ -625,10 +633,6 @@ input:checked + .slider:before {
 	height: 100%;
 	width: 100%;
 	transform-origin: center;
-  }
-  @keyframes rotate {
-	from { transform: rotateY(0deg); }
-	to { transform: rotateY(360deg); }
   }
   .center-marker {
 	position: absolute;
@@ -648,4 +652,13 @@ input:checked + .slider:before {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+  }
+
+.d3-tip {
+    line-height: 1;
+    padding: 12px;
+    color: #fff;
+    border-radius: 2px;
+    pointer-events: none;
+    z-index: 2000; /* 确保提示框在弹窗之上 */
   }
